[gd_scene load_steps=5 format=3 uid="uid://bkgjtu8qugixo"]

[ext_resource type="Script" uid="uid://8l82jjdyprtf" path="res://scripts/poke_button.gd" id="1_ky7qp"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ky7qp"]
metallic = 0.2
roughness = 0.4

[sub_resource type="BoxMesh" id="BoxMesh_ahwkj"]
size = Vector3(0.02, 0.005, 0.02)

[sub_resource type="BoxShape3D" id="BoxShape3D_ahwkj"]
size = Vector3(0.023, 0.02, 0.02)

[node name="PokeButton" type="Node3D"]
script = ExtResource("1_ky7qp")
button_material = SubResource("StandardMaterial3D_ky7qp")

[node name="ButtonMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_ahwkj")

[node name="InteractionArea" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 2
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractionArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000322266, 0.000334473, -0.00259766)
shape = SubResource("BoxShape3D_ahwkj")

[node name="AudioPlayer" type="AudioStreamPlayer3D" parent="."]
